--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,92 @@ body {
     color: #434455;
     background-color: #fff;
 }
+
 ul,ol {
     list-style-type: none;
+    margin: 0;
+    padding-left: 0;
 }
+
 a {
     text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.container {
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.section {
+    padding: 120px 0;
+}
+/*header*/
+
+ .header {
+    border-bottom: 1px solid #e7e9fc;
+ }
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+.contacts {
+    font-style: normal;
+    margin-left: auto;
+}
+
+.contacts-list {
+    gap: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.contacts-link {
+    display: block;
+    padding: 24px 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.header-logo {
+    padding: 24px;
+    margin-right: 76px;
 }
 
 .logo {
@@ -28,6 +109,8 @@ color: #2e2f42;
 }
 
 .menu-link {
+    display: block;
+    padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -35,17 +118,6 @@ color: #2e2f42;
     color: #2e2f42;
 }
 
-.contacts {
-font-style: normal;
-}
-
-.contacts-link {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
 
 .menu-link:hover,
 .menu-link:focus,
@@ -53,12 +125,18 @@ font-style: normal;
 .contacts-link:focus {
 color: #404bbf;
 }
+/*main*/
 
 .business {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
+
 .business-title {
+margin: 0 auto;
+margin-bottom: 48px;
+    max-width: 496px;
         font-weight: 700;
         font-size: 56px;
         line-height: 1.07;
@@ -69,6 +147,12 @@ color: #404bbf;
 
 .business-btn {
     font-family: "Roboto", sans-serif;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    border: none;
+    display: block;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -82,7 +166,25 @@ color: #404bbf;
 .business-btn:focus {
 background-color: #404bbf;
 }
+
+/*advantages*/
+
+.advantages {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.advantages-list {
+    display: flex;
+    gap: 24px;
+}
+
+.advantages-item {
+width: calc((100% - 72px) / 4);
+}
+
 .advantages-title {
+        margin-bottom: 8px;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
@@ -99,9 +201,12 @@ background-color: #404bbf;
 }
 
 .team {
-background-color: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: #f4f4fd;
 }
 .ourteam-title {
+    margin-bottom: 72px;
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
@@ -111,11 +216,24 @@ background-color: #f4f4fd;
         text-transform: capitalize;
 }
 
+.ourteam-list {
+    display: flex;
+    gap: 24px;
+}
+
 .team-item {
 background-color: #fff;
+width: calc((100% - 72px) / 4);
+border-radius: 0 0 4px 4px;
+}
+
+.team-box{
+    padding: 32px 0;
+    text-align: center;
 }
 
 .team-title {
+    margin-bottom: 8px;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
@@ -132,7 +250,14 @@ background-color: #fff;
         color: #434455;
 }
 
+
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .title {
+    margin-bottom: 72px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -142,7 +267,23 @@ background-color: #fff;
     text-transform: capitalize;
 }
 
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+}
+.portfolio-item {
+width: calc((100% - 24px * 2) / 3);
+}
+
+.portfolio-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
 .portfolio-title {
+    margin-bottom: 8px;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
@@ -157,13 +298,21 @@ background-color: #fff;
         color: #434455;
 }
 
+
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 .foter-text {
+    max-width: 264px;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+}
+
+.footer-logo {
+    display: inline-block;
+margin-bottom: 16px;
 }
